--- a/src/componentes/itemcount/itemCount.css
+++ b/src/componentes/itemcount/itemCount.css
@@ -1,6 +1,5 @@
 #ventas{
-    background-color:rgb(252, 255, 50);
-    margin: 1vh;
+    background-color:rgb(121, 249, 253);
     padding:1vw;
     display:flex;
     justify-content:space-between;
@@ -11,17 +10,16 @@
 
 }
 #cuentas{
-    background-color:rgba(0, 255, 242, 0.815);
+    background-color:rgba(63, 50, 248, 0.81);
+    border-radius:10px;
     padding: 0px 2vh;
 }
 p{
-    
     font-size:18px;
-    font-weight: bold;
-    
+    font-weight: bold;  
 }
 button{
-    background-color:rgb(183, 0, 255);
+    background-color:rgb(248, 250, 115);
 }
 
 .botoncito{
