--- a/src/componentes/itemlist/item.css
+++ b/src/componentes/itemlist/item.css
@@ -1,11 +1,32 @@
 #caja{
     display:flex;
-    background-color: aqua;
+    background-color: rgb(115, 255, 255);
+    justify-content:space-between;
+    align-items:center;
+    padding:1vw;
+    border: 3px solid black;
+    margin: 2px;
     
+}
+.cajaTexto{
+    display: flex;
+    align-items:center;
+    height: 10vh;
+
+}
+.texto{
+    padding:10px;
+}
+.img{
+    height:100%;
+}
+.texto{
+    display: flex;
+    flex-direction:column;
+    box-sizing: border-box;
 }
 .lista{
     background-color: red;
     font-size: 12px;
-    padding:1vw;
 
 }
