--- a/src/componentes/itemlist/item.css
+++ b/src/componentes/itemlist/item.css
@@ -30,3 +30,12 @@
     font-size: 12px;
 
 }
+#botonList{
+    background-color:yellow;
+    height: 4vh;
+    width:8vw;
+    
+}
+#botonListLink{
+    text-decoration: none;
+}
