--- a/src/componentes/itemDetails/itemD.css
+++ b/src/componentes/itemDetails/itemD.css
@@ -15,3 +15,16 @@
 img{
     height:30vh;
 }
+#botonConfirmar{
+    height:7vh;
+    width:100%;
+    font-size: 20px;
+    background-color:yellow;
+    font-weight:bold;
+    
+}
+#botonConfirmarLink{
+    text-decoration: none;
+
+   
+}
