--- a/src/componentes/nav/nav.css
+++ b/src/componentes/nav/nav.css
@@ -7,13 +7,13 @@
     flex-direction: row;
     background-color:rgb(71, 143, 252);
     margin: 0px;
-    width:100%;
+    width:90vw;
     justify-content: space-around;
     align-items:center;
     
 }
 
-a{
+#linkNav{
     
     display:flex;
     justify-content:center;
@@ -21,7 +21,7 @@ a{
     font-size:20px;
     text-decoration: none;
     height: 7vh;
-    width: 20vw;
+    width: 100%;
     
 
 }
