--- a/src/componentes/Cart/cart.css
+++ b/src/componentes/Cart/cart.css
@@ -1,10 +1,19 @@
+#carta{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+}
+
 #ListaCompra{
     display:flex;
     flex-direction: row;
     justify-content:space-between;
     align-items:center;
-    background-color: antiquewhite;
-    padding: 2vh;
+    background-color: rgb(214, 248, 250);
+    padding:1vw;
+    border-radius:5px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.808);
+    margin: 1vh;
 }
 #ListaCompraDatos{
     display: flex;
@@ -20,6 +29,33 @@
 #ListaBorrar{
     height:5vh;
     width: 7vw;
-
     background-color:rgb(252, 50, 50)
+}
+#confirmar{
+    background-color:rgb(83, 255, 121);
+    display:flex;
+    align-items: center;
+    justify-content:space-between;
+    margin:1vh;
+    padding:1vw;
+    border-radius:10px;
+}
+#botones{
+    display:flex;
+    align-items:center;
+
+}
+#compra{
+    height:5vh;
+    width: 10vw;
+    background-color:yellow;
+    font-size: 16px;
+    font-weight: bold;
+}
+#cancelar{
+    height:5vh;
+    width: 10vw;
+    background-color:red;
+    font-size: 16px;
+    font-weight: bold;
 }
