--- a/src/componentes/header/header.css
+++ b/src/componentes/header/header.css
@@ -2,30 +2,32 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: rgb(121, 199, 255);
-    background: linear-gradient(277deg, rgba(72, 204, 236, 1.00) 35%, rgba(142, 231, 243, 1.00) 86%);
+    background: rgb(144, 207, 252);
+    background: linear-gradient(277deg, rgba(0, 171, 250, 1.00) 35%, rgba(239, 240, 240, 1.00) 86%);
 
 }
 .imgtit {
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding:20px;
 }
 .imagen {
-    height: 20vh;
+    height: 15vh;
     width: 10vw;
-    
-    padding-Right: 2%;
 
 }
 .icon{
     display: flex;
     height:20vh;
     align-items: flex-end;
+    
+    
 }
 .iconos {
     display: flex;
     align-Items: center;
+    padding:20px;
     
 }
 
