--- a/src/componentes/itemDetails/itemD.css
+++ b/src/componentes/itemDetails/itemD.css
@@ -1,30 +1,36 @@
-.cajaProducto{
-    background-color: rgb(103, 209, 241);
+#cajaProducto{
+    background-color: rgb(196, 237, 250);
+    border-radius: 20px;
+    box-shadow: 15px 10px 10px rgba(0, 0, 0, 0.808);
+    width: 70vw;
+    margin:5vh;
+}
+#cajaProductoD{
     display: flex;
-    flex-direction:column;
-    border:5px solid;
+    align-items: center;
+    justify-content:center;
+    padding:3vh;
     
 }
-.cajaProductoD{
-    display: flex;
-    padding:1vh;
+#imagenDetalle{
+    height:30vh;
+    margin-right:10vw ;
 }
 .cajaProductoTexto{
     padding:2vh;
 }
-#imagenDetalle{
-    height:30vh;
-}
+
 #botonConfirmar{
     height:7vh;
     width:100%;
     font-size: 20px;
-    background-color:yellow;
+    background-color:rgb(255, 252, 82);
     font-weight:bold;
     
 }
-#botonConfirmarLink{
-    text-decoration: none;
 
-   
+#itemDetailConteiner{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
