--- a/src/componentes/BuyDate/buydate.css
+++ b/src/componentes/BuyDate/buydate.css
@@ -1,3 +1,8 @@
+#datosCompra{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
 #buy{
     display:flex;
     flex-direction: column;
@@ -5,6 +10,26 @@
     align-items:center;
     background-color: rgb(214, 248, 250);
     padding:1vw;
+    width:80vw;
+    border-radius:5px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.808);
+    margin: 2vw;
+}
+#confirmarCompra{
+    margin:2vh;
+    background-color:rgb(129, 248, 129);
+    height:4vh;
+    font-weight: bold;
+}
+#ticket{
+    display:flex;
+    flex-direction: column;
+    justify-content:space-between;
+    align-items:center;
+    background-color: rgb(214, 248, 250);
+    padding:1vw;
+    height:60vh;
+    width:60vw;
     border-radius:5px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.808);
     margin: 2vw;
