--- a/src/componentes/itemDetails/itemD.css
+++ b/src/componentes/itemDetails/itemD.css
@@ -20,15 +20,25 @@
     padding:2vh;
 }
 
+
+#links{
+    display: flex;
+    align-items: center;
+}
 #botonConfirmar{
     height:7vh;
-    width:100%;
+    width:35vw;
     font-size: 20px;
     background-color:rgb(255, 252, 82);
     font-weight:bold;
-    
 }
-
+#volver{
+    height:7vh;
+    width:35vw;
+    font-size: 20px;
+    background-color:rgb(255, 252, 82);
+    font-weight:bold;
+}
 #itemDetailConteiner{
     display: flex;
     align-items: center;
