--- a/src/componentes/BuyDate/buydate.css
+++ b/src/componentes/BuyDate/buydate.css
@@ -2,15 +2,13 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    height:60vh;
 }
 #buy{
     display:flex;
     flex-direction: column;
-    justify-content:space-between;
     align-items:center;
     background-color: rgb(214, 248, 250);
-    height:55vh;
+    height:60vh;
     width:60vw;
     border-radius:5px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.808);
@@ -21,6 +19,10 @@
     background-color:rgb(129, 248, 129);
     height:4vh;
     font-weight: bold;
+}
+#inicieSeccion{
+    display:flex;
+    height:60vh;
 }
 #ticket{
     display:flex;
