--- a/src/componentes/carWidget/cartWidget.css
+++ b/src/componentes/carWidget/cartWidget.css
@@ -4,9 +4,11 @@
     align-items:center;
     height:7vh;
     width: 10vw;
+    background-color:rgb(247, 247, 40);
 }
 #imagenCart{
     display:flex;
-    height:80%;
-    width: 80%;
+    height:70%;
+    width: 70%;
+    
 }
